# ldoc

./: README.md
.github/workflows/: ci.yml  release.yml
cli/: package.json  pnpm-lock.yaml  tsconfig.json
cli/src/: argv.ts  binary.ts  getDocusaurusConfig.ts  index.ts  prepareProject.ts
cli/src/commands/: build.ts  dev.ts
cli/src/typings/: cachedir.d.ts
cli/template/root/: package.json  pnpm-lock.yaml
cli/template/root/src/css/: luaudoc.css
cli/template/root/src/theme/SearchBar/: index.js
docusaurus-plugin-luaudoc/: README.md  package.json  pnpm-lock.yaml
docusaurus-plugin-luaudoc/src/: generateRobloxTypes.js  index.js
docusaurus-plugin-luaudoc/src/components/: Admonition.js  Badge.js  ClassMember.js  GenericLink.js  InlineDescription.js  LuaClass.js  LuaFunction.js  LuaProp.js  LuaType.js  LuaTypeDef.js  Markdown.js  Redirect.js  SourceLink.js  Syntax.js  Tag.js  styles.module.css
extractor/: Cargo.toml
extractor/src/: main.rs
scripts/: release.js
